; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_names.c_digest_from_name.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_names.c_digest_from_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OBJ_NAME_TYPE_MD_METH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @digest_from_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @digest_from_name(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32**, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i32**
  store i32** %7, i32*** %5, align 8
  %8 = load i32**, i32*** %5, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %18

12:                                               ; preds = %2
  %13 = load i8*, i8** %3, align 8
  %14 = load i32, i32* @OBJ_NAME_TYPE_MD_METH, align 4
  %15 = call i64 @OBJ_NAME_get(i8* %13, i32 %14)
  %16 = inttoptr i64 %15 to i32*
  %17 = load i32**, i32*** %5, align 8
  store i32* %16, i32** %17, align 8
  br label %18

18:                                               ; preds = %12, %11
  ret void
}

declare dso_local i64 @OBJ_NAME_get(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
